# dynamics-ensembles-rl

./: .gitignore  README.md  convert_hf_ensemble.py  deterministic_model.py  dynamics_model.py  guild.yml  learn_model.py  load_dataset.py  probabilistic_model.py  pyproject.toml  requirements.txt  train_ensemble.py  utils.py
configs/: README.md  dnn.yaml  halfcheetah_dnn.yaml  halfcheetah_morel.yaml  halfcheetah_pnn.yaml  hopper_deterministic.yaml  morel.yaml  pnn.yaml
models/: deterministic_model.py  dynamics_model.py  probabilistic_model.py  utils.py
results/: plot_results.ipynb
results/logs/: halfcheetah_medium_dnn.csv  halfcheetah_medium_pnn.csv  halfcheetah_medium_pnn_ns.csv
